--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,10 +3,11 @@
   "dockerFile": "Dockerfile",
   "runArgs": [
     "--gpus", "all",
+    "--privileged=true",
   // Uncomment the next line to use a non-root user. On Linux, this will prevent
   // new files getting created as root, but you may need to update the USER_UID
   // and USER_GID in .devcontainer/Dockerfile to match your user if not 1000.
-  "-u", "vscode"
+  "-u", "root"
   ],
   "settings": {
   "terminal.integrated.shell.linux": "/bin/bash",
